--- a/public/index.html
+++ b/public/index.html
@@ -74,14 +74,12 @@ width: 100vw;
 height: 100vh;
 position: absolute;
 z-index: 1;
-	background-color: #ffffff;
 display: none; }
 
 #firstP {
 top: 0;
 left: 0;
-	background-color: #ffffff;
-	width: 100vw;
+width: 100vw;
 height: 100vh;
 position: absolute;
 z-index: 1;
@@ -132,7 +130,7 @@ display: none; }
  xmlns="http://www.w3.org/2000/svg">  
     <g id="camera">
 	
-<svg id="hexagonGroup" style="background-color: #ffffff;" >
+<svg id="hexagonGroup" >
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
   <text id="textLine2" x="10" y="40" fill="blue">
