--- a/public/index.html
+++ b/public/index.html
@@ -284,7 +284,7 @@ let currentCameraY3 = 0;
 	
 	const camera = document.getElementById('camera');
 
-	//camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
+	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
 
 
 let textLine1 = document.getElementById('textLine1');
