--- a/public/index.html
+++ b/public/index.html
@@ -68,17 +68,18 @@ position: absolute;
 display: none; }
     
 #hexagonGroup {
-top: 1000;
-left: 1000;
+top: 0;
+left: 0;
 width: 100vw;
 height: 100vh;
+	background-color: #000000;
 position: absolute;
 z-index: 1;
 display: none; }
 
 #firstP {
-top: 1000;
-left: 1000;
+top: 0;
+left: 0;
 width: 100vw;
 height: 100vh;
 position: absolute;
