--- a/public/index.html
+++ b/public/index.html
@@ -278,8 +278,8 @@ let topplayers = [];
 	const svgWidth = document.documentElement.clientWidth;
 const svgHeight = document.documentElement.clientHeight;
 
-const initialCameraX = svgWidth / 2 ;
-const initialCameraY = svgHeight / 2 ;
+let initialCameraX = svgWidth / 2 ;
+let initialCameraY = svgHeight / 2 ;
 
 let currentCameraX3 = 0;
 let currentCameraY3 = 0;
