--- a/public/index.html
+++ b/public/index.html
@@ -912,7 +912,7 @@ for (const point of points) {
 const [x, y] = point.split(',').map(Number);
 currentVertex++;
 if (currentVertex === targetVertexNumber) {
-console.log(`Random: ${targetVertexNumber}: (${x}, ${y})`);\
+console.log(`Random: ${targetVertexNumber}: (${x}, ${y})`);
 	randomX = x;
 	randomY = Y;
 return; // Termina la función después de encontrar el vértice deseado
