--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@ currentVertex++;
 if (currentVertex === targetVertexNumber) {
 console.log(`Random: ${targetVertexNumber}: (${x}, ${y})`);
 	randomX = x;
-	randomY = Y;
+	randomY = y;
 return; // Termina la función después de encontrar el vértice deseado
 }}} console.log(`No se encontraron coordenadas para el vértice ${targetVertexNumber}`);
 }
