--- a/public/index.html
+++ b/public/index.html
@@ -369,11 +369,11 @@ playerElement.setAttribute('r', 9+ sizeCalc * 10);
 playerElement.setAttribute('fill', player.color);
 //playerElement.setAttribute('cx', player.x);
 //playerElement.setAttribute('cy', player.y);
-playerElement.setAttribute('cx', randomX);
-playerElement.setAttribute('cy', randomY);
+playerElement.setAttribute('cx', player.x);
+playerElement.setAttribute('cy', player.y);
 hexagonGroup.appendChild(playerElement);
-initialCameraX = svgWidth / 2 - randomX;
-initialCameraY = svgHeight / 2 - randomY;	
+initialCameraX = svgWidth / 2 - player.x;
+initialCameraY = svgHeight / 2 - player.y;	
 camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
 let currentCameraX4 = 0;	
 let currentCameraY4 = 0;	
@@ -399,8 +399,8 @@ if (existingTextElement) {
 } else {
     const textElement2 = document.createElementNS('http://www.w3.org/2000/svg', 'text');
     textElement2.setAttribute('id', playerId + '-name');
-    textElement2.setAttribute('x', randomX);
-    textElement2.setAttribute('y', randomY - 10);
+    textElement2.setAttribute('x', player.x);
+    textElement2.setAttribute('y', player.y - 10);
     textElement2.setAttribute('text-anchor', 'middle');
     textElement2.setAttribute('fill', 'green');
     textElement2.setAttribute('font-size', '16px');
@@ -910,6 +910,8 @@ if (currentVertex === targetVertexNumber) {
 console.log(`Random: ${targetVertexNumber}: (${x}, ${y})`);
 	randomX = x;
 	randomY = y;
+	    socket.emit('updatePosition', { x, y });
+
 return; // Termina la función después de encontrar el vértice deseado
 }}} console.log(`No se encontraron coordenadas para el vértice ${targetVertexNumber}`);
 }
