--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,10 @@ document.getElementById('submitButton').addEventListener('click', function () {
 	});
 	
 	const playerName = document.getElementById('playerName').value;
-	console.log(`CLIENT EJEC. Name: ${playerName}`);	    
+	console.log(`CLIENT EJEC. Name: ${playerName}`);
+
+		    socket.emit('updatePosition', { randomX, randomY });
+
 
 	//Ocultar el formulario y mostrar el canvas
 	nameForm.style.display = 'none';
@@ -910,7 +913,6 @@ if (currentVertex === targetVertexNumber) {
 console.log(`Random: ${targetVertexNumber}: (${x}, ${y})`);
 	randomX = x;
 	randomY = y;
-	    socket.emit('updatePosition', { x, y });
 
 return; // Termina la función después de encontrar el vértice deseado
 }}} console.log(`No se encontraron coordenadas para el vértice ${targetVertexNumber}`);
